--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,18 @@
-# Diretórios de aplicações e caches
-Code - OSS/
-Electron/
-discord/
-dolphinrc
-go/
-google-chrome/
-nwg-look/
-picom/
-pulse/
-session/
-spotify/
-trashrc/
-xsettingsd/
+/*
 
-# Configurações de GTK e Qt
-gtk-2.0/
-gtk-3.0/
-gtk-4.0/
-gtkrc
-gtkrc-2.0
-QtProject.conf
-Trolltech.conf
+# Un-ignore specific directories and their contents
+!swaync/
+!waybar/
+!hypr/
+!nvim/
+!kitty/
+!wlogout/
+!waypaper/
 
-# Configurações do KDE / Plasma
-baloofileinformationrc
-baloofilerc
-dconf/
-kactivitymanagerdrc
-kconf_updaterc
-kde.org/
-kdedefaults/
-kdeglobals
-kglobalshortcutsrc
-kiorc
-ksmserverrc
-ktimezonedrc
-kwinoutputconfig.json
-kwinrc
-plasma-localerc
-
-# Outros
-user-dirs.dirs
-user-dirs.locale
-
+# Ensure files inside the allowed directories are included
+!swaync/**
+!waybar/**
+!hypr/**
+!nvim/**
+!kitty/**
+!wlogout/**
